# -

./: .gitignore  CMakeLists.txt  README.md
python/: generate_skills_json.py  skill_editor.py
src/: main.cpp
src/core/: CMakeLists.txt  GameConfig.h  GameEngine.cpp  GameEngine.h  MoveResult.h  ProgressManager.cpp  ProgressManager.h  RandomBag.cpp  RandomBag.h  ScoreCalculator.cpp  ScoreCalculator.h  SkillManager.cpp  SkillManager.h  TetrisBoard.cpp  TetrisBoard.h  Tetromino.cpp  Tetromino.h
src/core/skills/: BottomBlastSkill.cpp  BottomBlastSkill.h  EarthquakeSkill.cpp  EarthquakeSkill.h  GravityBreakSkill.cpp  GravityBreakSkill.h  LineClearSkill.cpp  LineClearSkill.h  PurgeWaveSkill.cpp  PurgeWaveSkill.h  SkillBase.cpp  SkillBase.h  SkillFactory.cpp  SkillFactory.h  TimeFreezeSkill.cpp  TimeFreezeSkill.h
src/data/: resources.qrc  skills.json
src/ui/: CMakeLists.txt  EnergyBarWidget.cpp  EnergyBarWidget.h  GameBoardWidget.cpp  GameBoardWidget.h  GameOverDialog.cpp  GameOverDialog.h  MainWindow.cpp  MainWindow.h  MenuWidget.cpp  MenuWidget.h  NextPieceWidget.cpp  NextPieceWidget.h  ScorePanelWidget.cpp  ScorePanelWidget.h  SkillPanelWidget.cpp  SkillPanelWidget.h
src/ui/effects/: ParticleSystem.cpp  ParticleSystem.h  ScreenFlash.cpp  ScreenFlash.h  ScreenShake.cpp  ScreenShake.h
